1) Wrote template variable pi 2) Wrote template functions abs,sqr, cube and mod

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,3 +14,4 @@ include_directories(include)
 # Add Executable Program
 add_executable(test_cexpr_basic_string app/test_cexpr_basic_string.cpp)
 add_executable(test_mandelbrot app/test_mandelbrot.cpp)
+add_executable(test_cexpr_math app/test_cexpr_math.cpp)
